syntax = "proto3";
package proto;

option go_package = "model/huangli";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service HuangLi {
  // 获取某天的黄历-汇总
  rpc GetHuangLiByDate(GetHuangLiByDateRequest) returns (GetHuangLiByDateResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getHuangLiByDate"
      body: "*"
    };
  }
  // 获取某天下的黄历时间列表
  rpc GetHuangLiHoursByDate(GetHuangLiHoursByDateRequest) returns (GetHuangLiHoursByDateResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getHuangLiHoursByDate"
      body: "*"
    };
  }

  // 获取某天的黄历图
  rpc GetHuangLiPicByDate(GetHuangLiPicByDateRequest) returns (GetHuangLiPicByDateResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getHuangLiPicByDate"
      body: "*"
    };
  }

  // 获取某天的老黄历
  rpc GetYellowHuangLiByDate(GetYellowHuangLiByDateRequest) returns (GetYellowHuangLiByDateResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getYellowHuangLiByDate"
      body: "*"
    };
  }

  // 获取某天的万年年
  rpc GetYellowCalendarByDate(GetYellowCalendarByDateRequest) returns (GetYellowCalendarByDateResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getYellowCalendarByDate"
      body: "*"
    };
  }

  //  历史上的今天-列表
  rpc GetHistoryByDate(GetHistoryByDateRequest) returns (GetHistoryByDateResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getHistoryByDate"
      body: "*"
    };
  }

  //  历史上的今天-详情
  rpc GetHistoryInfoByEID(GetHistoryInfoByEIDRequest) returns (GetHistoryInfoByEIDResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getHistoryInfoByEID"
      body: "*"
    };
  }

  //  查询节假日-列表
  rpc GetHolidayList(GetHolidayListRequest) returns (GetHolidayListResponse) {
    option (google.api.http) = {
      post: "/v1/huangli/getHolidayList"
      body: "*"
    };
  }

}

//======================== 查询最近节假日-列表 ========================
message  GetHolidayListRequest {
  string year_month = 1; //2021-1
}

message GetHolidayListResponse {
  int32 code = 1;
  string msg = 2;
  repeated HolidayInfo data = 3;
}

message HolidayInfo {
  string  date = 1;
  string status = 2;
}
//======================== 历史上的今天-详情 ========================
message GetHistoryInfoByEIDRequest {
  string e_id = 1;
}

message GetHistoryInfoByEIDResponse {
  int32 code = 1;
  string msg = 2;
  repeated HistoryInfo data = 3;
}

message HistoryInfo {
  string e_id = 1;
  string title = 2;
  string content = 3;
}

//======================== 历史上的今天-列表 ========================
message GetHistoryByDateRequest {
  google.protobuf.Timestamp date = 1;
}
message GetHistoryByDateResponse {
  int32 code = 1;
  string msg = 2;
  repeated HistoryList data = 3;
}

message HistoryList {
  string day = 1;
  string date = 2;
  string title = 3;
  string e_id = 4;
}
//======================== 公共结构体 ========================
// 万年历详情
message CalendarInfo {
  string animals_year = 1;
  string suit = 2;
  string avoid = 3;
  string lunar = 4;
  string lunar_year = 5;
  string weekday = 6;
  string year_month = 7;
}

// 老黄历详情
message YellowCalendarDayInfo {
  string id = 1;
  string yangli = 2;
  string yinli = 3;
  string wuxing = 4;
  string chongsha = 5;
  string baiji = 6;
  repeated string jishen = 7;
  repeated string yi = 8;
  repeated string xiongshen = 9;
  repeated string ji = 10;
}

// 老黄历-时辰详情
message YellowCalendarHourInfo {
  string yangli = 1;
  string hours = 2;
  string des = 3;
  repeated string yi = 4;
  repeated string ji = 5;
}

//======================== 查询某天的黄历 ========================
message GetHuangLiByDateRequest {
  google.protobuf.Timestamp date = 1;
}

message GetHuangLiByDateResponse {
  int32 code = 1;
  string msg = 2;
  SomeDayHuangLiInfo data = 3;
}

message SomeDayHuangLiInfo {
  CalendarInfo calendar = 1;
  YellowCalendarDayInfo yellow_calendar_day = 2;
  repeated YellowCalendarHourInfo yellow_calendar_hour = 3;
  int64 timestamp = 4;
  string template_content = 5;
}

//======================== 获取某天下的黄历时间列表 ========================
message GetHuangLiHoursByDateRequest {
  google.protobuf.Timestamp date = 1;
}

message GetHuangLiHoursByDateResponse {
  int32 code = 1;
  string msg = 2;
  repeated YellowCalendarHourInfo data = 3;
}

//======================== 获取某天的黄历图片 ========================
message GetHuangLiPicByDateRequest {
  google.protobuf.Timestamp date = 1;
  string app_code = 2;
  string access_token = 3;
}

message GetHuangLiPicByDateResponse {
  int32 code = 1;
  string msg = 2;
  GetHuangLiPicByDateInfo data = 3;
}

message GetHuangLiPicByDateInfo {
  string mediaID = 1;
}

//======================== 获取某天的老黄历 ========================
message GetYellowHuangLiByDateRequest {
  google.protobuf.Timestamp date = 1;
}

message GetYellowHuangLiByDateResponse {
  int32 code = 1;
  string msg = 2;
  YellowCalendarDayInfo data = 3;
}

//======================== 获取某天的万年历 ========================
message GetYellowCalendarByDateRequest {
  google.protobuf.Timestamp date = 1;
}

message GetYellowCalendarByDateResponse {
  int32 code = 1;
  string msg = 2;
  CalendarInfo data = 3;
}
