syntax = "proto3";
package proto;

option go_package = "model/wxapp";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";

service AppService {
  rpc GetListByPage(AppPageListRequest) returns (AppPageListResponse) {
    option (google.api.http) = {
      get: "/v1/apps/getListByPage"
    };
  }
  rpc GetCodeNameList(GetCodeNameListRequest) returns (GetCodeNameListResponse) {
    option (google.api.http) = {
      get: "/v1/apps/getCodeNameList"
    };
  }
  rpc GetOne(App) returns (AppResponse) {
    option (google.api.http) = {
      get: "/v1/apps/getOne"
    };
  }
  rpc CreateOne(App) returns (AppResponse) {
    option (google.api.http) = {
      post: "/v1/apps/createOne"
      body: "*"
    };
  }
  rpc UpdateOne(App) returns (AppResponse) {
    option (google.api.http) = {
      put: "/v1/apps/updateOne"
      body: "*"
    };
  }
  rpc ChangeStatus(AppChangeStatusRequest) returns (AppChangeStatusResponse) {
    option (google.api.http) = {
      put: "/v1/apps/changeStatus"
      body: "*"
    };
  }
}

message App {
  int32 id = 1;
  string name = 2;
  string code = 3;
  int32 platform = 4;
  int32 omsAppID = 5;
  int32 cAppID = 6;
  string wxAppID = 7;
  string wxAppSecret = 8;
  string wxToken = 9;
  int32 wxEncodingType = 10;
  string wxEncodingAESKey = 11;
  int32 status = 12;
  google.protobuf.Timestamp created_at = 13 [json_name="created_at"];
  google.protobuf.Timestamp updated_at = 14 [json_name="updated_at"];
}

message AppPageList {
  int32 page = 1;
  int32 page_size = 2 [json_name="page_size"];
  int32 total_page = 3 [json_name="total_page"];
  int32 total_count = 4 [json_name="total_count"];
  repeated App list = 5;
}

message AppResponse {
  int32 code = 1;
  string msg = 2;
  App data = 3;
}

message AppPageListRequest {
  int32 page = 1;
  int32 page_size = 2;
}

message AppPageListResponse {
  int32 code = 1;
  string msg = 2;
  AppPageList data = 3;
}

message AppChangeStatusRequest {
  int32 id = 1;
  int32 status = 2;
}

message AppChangeStatusResponse {
  int32 code = 1;
  string msg = 2;
}

//======================== 获取app列表 ========================
message GetCodeNameListRequest {
  int32 platform = 1;
}

message GetCodeNameListResponse {
  int32 code = 1;
  string msg = 2;
  map<string, string> data = 3;
}